--- a/project/week5-project.ipynb
+++ b/project/week5-project.ipynb
@@ -29,11 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File data/dialogues.tsv is already downloaded.\n",
+      "File data/tagged_posts.tsv is already downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -73,11 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "from utils import *"
    ]
@@ -100,10 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -130,10 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tfidf_features(X_train, X_test, vectorizer_path):\n",
@@ -145,9 +155,15 @@
     "    # Pickle the trained vectorizer to 'vectorizer_path'\n",
     "    # Don't forget to open the file in writing bytes mode.\n",
     "    \n",
-    "    ######################################\n",
-    "    ######### YOUR CODE HERE #############\n",
-    "    ######################################\n",
+    "    tfidf_vectorizer = TfidfVectorizer(encoding='utf-8', min_df=5, max_df=0.9, ngram_range=(1,2), token_pattern='(\\S+)')\n",
+    "    tfidf_vectorizer.fit(X_train)\n",
+    "    \n",
+    "    X_train = tfidf_vectorizer.transform(X_train)\n",
+    "    X_test = tfidf_vectorizer.transform(X_test)\n",
+    "    \n",
+    "    output = open(vectorizer_path, 'wb')\n",
+    "    pickle.dump(tfidf_vectorizer, output)\n",
+    "    output.close()\n",
     "    \n",
     "    return X_train, X_test"
    ]
@@ -161,10 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sample_size = 200000\n",
@@ -182,22 +196,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>82925</th>\n",
+       "      <td>Donna, you are a muffin.</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48774</th>\n",
+       "      <td>He was here last night till about two o'clock....</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55394</th>\n",
+       "      <td>All right, then make an appointment with her s...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90806</th>\n",
+       "      <td>Hey, what is this-an interview? We're supposed...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107758</th>\n",
+       "      <td>Yeah. He's just a friend of mine I was trying ...</td>\n",
+       "      <td>dialogue</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     text       tag\n",
+       "82925                            Donna, you are a muffin.  dialogue\n",
+       "48774   He was here last night till about two o'clock....  dialogue\n",
+       "55394   All right, then make an appointment with her s...  dialogue\n",
+       "90806   Hey, what is this-an interview? We're supposed...  dialogue\n",
+       "107758  Yeah. He's just a friend of mine I was trying ...  dialogue"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dialogue_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2168983</th>\n",
+       "      <td>43837842</td>\n",
+       "      <td>Efficient Algorithm to compose valid expressio...</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1084095</th>\n",
+       "      <td>15747223</td>\n",
+       "      <td>Why does this basic thread program fail with C...</td>\n",
+       "      <td>c_cpp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1049020</th>\n",
+       "      <td>15189594</td>\n",
+       "      <td>Link to scroll to top not working</td>\n",
+       "      <td>javascript</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200466</th>\n",
+       "      <td>3273927</td>\n",
+       "      <td>Is it possible to implement ping on windows ph...</td>\n",
+       "      <td>c#</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1200249</th>\n",
+       "      <td>17684551</td>\n",
+       "      <td>GLSL normal mapping issue</td>\n",
+       "      <td>c_cpp</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          post_id                                              title  \\\n",
+       "2168983  43837842  Efficient Algorithm to compose valid expressio...   \n",
+       "1084095  15747223  Why does this basic thread program fail with C...   \n",
+       "1049020  15189594                  Link to scroll to top not working   \n",
+       "200466    3273927  Is it possible to implement ping on windows ph...   \n",
+       "1200249  17684551                          GLSL normal mapping issue   \n",
+       "\n",
+       "                tag  \n",
+       "2168983      python  \n",
+       "1084095       c_cpp  \n",
+       "1049020  javascript  \n",
+       "200466           c#  \n",
+       "1200249       c_cpp  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stackoverflow_df.head()"
    ]
@@ -211,10 +372,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from utils import text_prepare"
@@ -222,14 +381,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dialogue_df['text'] = ######### YOUR CODE HERE #############\n",
-    "stackoverflow_df['title'] = ######### YOUR CODE HERE #############"
+    "dialogue_df['text'] = [text_prepare(text) for text in dialogue_df['text']]\n",
+    "stackoverflow_df['title'] = [text_prepare(title) for title in stackoverflow_df['title']]"
    ]
   },
   {
@@ -251,10 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
@@ -262,19 +417,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size = 320000, test size = 80000\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.concatenate([dialogue_df['text'].values, stackoverflow_df['title'].values])\n",
     "y = ['dialogue'] * dialogue_df.shape[0] + ['stackoverflow'] * stackoverflow_df.shape[0]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = ######### YOUR CODE HERE ##########\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
     "print('Train size = {}, test size = {}'.format(len(X_train), len(X_test)))\n",
     "\n",
-    "X_train_tfidf, X_test_tfidf = ######### YOUR CODE HERE ###########"
+    "X_train_tfidf, X_test_tfidf = tfidf_features(X_train, X_test, RESOURCE_PATH['TFIDF_VECTORIZER'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(320000, 60022)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tfidf.shape"
    ]
   },
   {
@@ -286,10 +467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
@@ -298,24 +477,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=10, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=0, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "######################################\n",
-    "######### YOUR CODE HERE #############\n",
-    "######################################"
+    "intent_recognizer = LogisticRegression(penalty='l2', C=10, random_state=0)\n",
+    "intent_recognizer.fit(X_train_tfidf, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy = 0.990975\n"
+     ]
+    }
+   ],
    "source": [
     "# Check test accuracy.\n",
     "y_test_pred = intent_recognizer.predict(X_test_tfidf)\n",
@@ -332,10 +528,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pickle.dump(intent_recognizer, open(RESOURCE_PATH['INTENT_RECOGNIZER'], 'wb'))"
@@ -359,10 +553,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = stackoverflow_df['title'].values\n",
@@ -371,11 +563,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size = 160000, test size = 40000\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
     "print('Train size = {}, test size = {}'.format(len(X_train), len(X_test)))"
@@ -390,10 +588,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "vectorizer = pickle.load(open(RESOURCE_PATH['TFIDF_VECTORIZER'], 'rb'))\n",
@@ -410,10 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.multiclass import OneVsRestClassifier"
@@ -421,24 +615,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OneVsRestClassifier(estimator=LogisticRegression(C=5, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=0, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False),\n",
+       "          n_jobs=1)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "######################################\n",
-    "######### YOUR CODE HERE #############\n",
-    "######################################"
+    "tag_classifier = OneVsRestClassifier(\n",
+    "    LogisticRegression(penalty='l2', C=5, random_state=0)\n",
+    ")\n",
+    "\n",
+    "tag_classifier.fit(X_train_tfidf, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy = 0.7998\n"
+     ]
+    }
+   ],
    "source": [
     "# Check test accuracy.\n",
     "y_test_pred = tag_classifier.predict(X_test_tfidf)\n",
@@ -455,10 +670,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pickle.dump(tag_classifier, open(RESOURCE_PATH['TAG_CLASSIFIER'], 'wb'))"
@@ -491,13 +704,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "starspace_embeddings, embeddings_dim = load_embeddings('data/word_embeddings.tsv')"
+    "starspace_embeddings, embeddings_dim = load_embeddings('ss_embeddings.tsv')"
    ]
   },
   {
@@ -509,10 +720,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "posts_df = pd.read_csv('data/tagged_posts.tsv', sep='\\t')"
@@ -528,13 +737,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "counts_by_tag = ######### YOUR CODE HERE #############"
+    "counts_by_tag = posts_df.groupby('tag').size()"
    ]
   },
   {
@@ -550,23 +757,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.makedirs(RESOURCE_PATH['THREAD_EMBEDDINGS_FOLDER'], exist_ok=True)\n",
     "\n",
     "for tag, count in counts_by_tag.items():\n",
+    "        \n",
     "    tag_posts = posts_df[posts_df['tag'] == tag]\n",
     "    \n",
-    "    tag_post_ids = ######### YOUR CODE HERE #############\n",
+    "    tag_post_ids = tag_posts['post_id'].tolist()\n",
     "    \n",
     "    tag_vectors = np.zeros((count, embeddings_dim), dtype=np.float32)\n",
+    "    \n",
     "    for i, title in enumerate(tag_posts['title']):\n",
-    "        tag_vectors[i, :] = ######### YOUR CODE HERE #############\n",
+    "        tag_vectors[i, :] = question_to_vec(title, starspace_embeddings, embeddings_dim)\n",
     "\n",
     "    # Dump post ids and vectors to a file.\n",
     "    filename = os.path.join(RESOURCE_PATH['THREAD_EMBEDDINGS_FOLDER'], os.path.normpath('%s.pkl' % tag))\n",
@@ -590,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
