Latest update after project evaluation

--- a/project/week5-project.ipynb
+++ b/project/week5-project.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pickle\n",
+    "import joblib\n",
     "import re\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer"
@@ -162,7 +162,7 @@
     "    X_test = tfidf_vectorizer.transform(X_test)\n",
     "    \n",
     "    output = open(vectorizer_path, 'wb')\n",
-    "    pickle.dump(tfidf_vectorizer, output)\n",
+    "    joblib.dump(tfidf_vectorizer, output)\n",
     "    output.close()\n",
     "    \n",
     "    return X_train, X_test"
@@ -424,7 +424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train size = 320000, test size = 80000\n"
+      "Train size = 360000, test size = 40000\n"
      ]
     }
    ],
@@ -432,7 +432,7 @@
     "X = np.concatenate([dialogue_df['text'].values, stackoverflow_df['title'].values])\n",
     "y = ['dialogue'] * dialogue_df.shape[0] + ['stackoverflow'] * stackoverflow_df.shape[0]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1)\n",
     "print('Train size = {}, test size = {}'.format(len(X_train), len(X_test)))\n",
     "\n",
     "X_train_tfidf, X_test_tfidf = tfidf_features(X_train, X_test, RESOURCE_PATH['TFIDF_VECTORIZER'])"
@@ -446,7 +446,7 @@
     {
      "data": {
       "text/plain": [
-       "(320000, 60022)"
+       "(360000, 67326)"
       ]
      },
      "execution_count": 12,
@@ -508,7 +508,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy = 0.990975\n"
+      "Test accuracy = 0.991925\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(intent_recognizer, open(RESOURCE_PATH['INTENT_RECOGNIZER'], 'wb'))"
+    "joblib.dump(intent_recognizer, open(RESOURCE_PATH['INTENT_RECOGNIZER'], 'wb'))"
    ]
   },
   {
@@ -592,7 +592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = pickle.load(open(RESOURCE_PATH['TFIDF_VECTORIZER'], 'rb'))\n",
+    "vectorizer = joblib.load(open(RESOURCE_PATH['TFIDF_VECTORIZER'], 'rb'))\n",
     "\n",
     "X_train_tfidf, X_test_tfidf = vectorizer.transform(X_train), vectorizer.transform(X_test)"
    ]
@@ -650,7 +650,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy = 0.7998\n"
+      "Test accuracy = 0.8004\n"
      ]
     }
    ],
@@ -674,7 +674,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(tag_classifier, open(RESOURCE_PATH['TAG_CLASSIFIER'], 'wb'))"
+    "joblib.dump(tag_classifier, open(RESOURCE_PATH['TAG_CLASSIFIER'], 'wb'))"
    ]
   },
   {
@@ -712,6 +712,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "95058"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(starspace_embeddings)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -720,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,11 +757,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "counts_by_tag = posts_df.groupby('tag').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tag\n",
+       "c#            394451\n",
+       "c_cpp         281300\n",
+       "java          383456\n",
+       "javascript    375867\n",
+       "php           321752\n",
+       "python        208607\n",
+       "r              36359\n",
+       "ruby           99930\n",
+       "swift          34809\n",
+       "vb             35044\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts_by_tag"
    ]
   },
   {
@@ -757,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +828,7 @@
     "\n",
     "    # Dump post ids and vectors to a file.\n",
     "    filename = os.path.join(RESOURCE_PATH['THREAD_EMBEDDINGS_FOLDER'], os.path.normpath('%s.pkl' % tag))\n",
-    "    pickle.dump((tag_post_ids, tag_vectors), open(filename, 'wb'))"
+    "    joblib.dump((tag_post_ids, tag_vectors), open(filename, 'wb'))"
    ]
   }
  ],
